# architekta

./: .gitignore  CONTRIBUTING.md  DEPENDENTS.md  README.md  architekta.code-workspace  environment.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish-noarch.yml
archive/: README.md
archive/2025-06-01_readme/: ARCHIVE_LOG.md
archive/2025-06-08_cli/: ARCHIVE_LOG.md  cli.py  env.py
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: commands.md  conf.py  index.md
docs/adr/: 0-alternatives.md  1-installation-environment.md  2-cli-commands.md
docs/api/: index.md
docs/audits/: audit-component.md  audit-interaction.md  audit-model.md
docs/design/: rename-pipeline.md
docs/guide/: cli-reference.md  configuration.md  getting-started.md  installation.md  usage.md
docs/internals/: rename-pipeline.md
src/architekta/: __init__.py  __main__.py  __version__.py  cli.py  diagnostics.py  infrastructure.py
src/architekta/commands/: env.py
src/architekta/core/: __init__.py
src/architekta/env/: __init__.py  commands.py  exceptions.py  operations.py  utils.py
src/architekta/github/: __init__.py  commands.py  exceptions.py  operations.py  utils.py
src/architekta/registry/: __init__.py  audit.py  commands.py  exceptions.py  render.py  schema.py  validation.py
src/architekta/rename/: __init__.py  commands.py  context.py  models.py  patterns.py  pipeline.py  plan.py  render.py  stages.py
tests/test_architekta/: __init__.py  test_cli.py  test_github_env_operations.py
tests/test_architekta/test_core/: __init__.py
to-classify/: README.md  compose_envs.py  configuration.md  pylint_configurer.py
